Updated MemberController Aded Testing script
