# src/DavesDartsClub.WebApi/Controllers/MemberController.cs
@@ -1,6 +1,7 @@
 ﻿using Microsoft.AspNetCore.Mvc;
 using System.Net;
 using System.Net.Http;
+using System.Xml.Linq;
 
 namespace DavesDartsClub.WebApi.Controllers;
 
@@ -8,18 +9,18 @@ namespace DavesDartsClub.WebApi.Controllers;
 [Route("[controller]")]
 public class MemberController : ControllerBase
 {
-    [HttpPost(Name = "Create Member")]
+    [HttpPost(Name = nameof(CreateMember))]
     [ProducesResponseType(((int)HttpStatusCode.Created))]
-    public ActionResult<Guid> Post(MemberRequest memberRequest)
+    public ActionResult<Guid> CreateMember([FromBody] MemberRequest memberRequest)
     {
         var id = Guid.NewGuid();
-        return CreatedAtRoute("Get Member", id);
+        return CreatedAtRoute(nameof(GetMemberById), new { memberId = id }, id);
     }
 
-    [HttpGet(Name = "Get Member")]
+    [HttpGet("{memberId}", Name = nameof(GetMemberById))]
     [ProducesResponseType(((int)HttpStatusCode.OK))]
     [ProducesResponseType(((int)HttpStatusCode.NotFound))]
-    public ActionResult<MemberResponse> Get(Guid memberId)
+    public ActionResult<MemberResponse> GetMemberById(Guid memberId)
     {
         var result = new MemberResponse()
         {
@@ -28,5 +29,32 @@ public class MemberController : ControllerBase
         };
 
         return Ok(result);
+    }
+
+    [HttpGet(Name = nameof(GetMemberByName))]
+    [ProducesResponseType(((int)HttpStatusCode.OK))]
+    public ActionResult<IEnumerable<MemberResponse>> GetMemberByName([FromQuery] string name)
+    {
+        var result = new List<MemberResponse> 
+        {
+           
+        };
+
+        return Ok(result);
+    }
+
+    [HttpDelete("{memberId}", Name = nameof(DeleteMember))]
+    [ProducesResponseType(((int)HttpStatusCode.NoContent))]
+    [ProducesResponseType(((int)HttpStatusCode.NotFound))]
+    public ActionResult DeleteMember(Guid memberId)
+    {
+        var memberExists = true; 
+
+        if (!memberExists)
+        {
+            return NotFound();  
+        }
+                
+        return NoContent();
     }
 }
